--- a/package.json
+++ b/package.json
@@ -34,15 +34,18 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
+    "@babel/register": "^7.15.3",
     "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "@wdio/cli": "^7.2.3",
     "@wdio/config": "^7.2.1",
-    "@wdio/cucumber-framework": "^7.2.1",
-    "@wdio/local-runner": "^7.2.3",
-    "@wdio/selenium-standalone-service": "^7.2.1",
-    "@wdio/spec-reporter": "^7.2.1",
+    "@wdio/cucumber-framework": "^7.14.1",
+    "@wdio/junit-reporter": "^7.14.1",
+    "@wdio/local-runner": "^7.14.1",
+    "@wdio/selenium-standalone-service": "^7.14.1",
+    "@wdio/spec-reporter": "^7.14.1",
     "@wdio/static-server-service": "^7.2.1",
     "chromedriver": "^93.0.0",
     "eslint": "^7.22.0",
